--- a/Aplicacao/App_Mass_Mailing/package.json
+++ b/Aplicacao/App_Mass_Mailing/package.json
@@ -28,10 +28,16 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.1.0",
+    "adonis-spreadsheet": "^1.0.1",
+    "auto-reload": "^0.1.0",
     "buffer": "^6.0.3",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.6.5"
+    "nodemailer": "^6.6.5",
+    "selenium-webdriver": "^4.0.0",
+    "urllib": "^2.37.4",
+    "xlsx": "^0.17.3",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
   "autoload": {
